# synodic-updates

./: .gitignore  pyproject.toml
.github/workflows/: add-targets.yml  signing-event.yml
metadata/: root.json  snapshot.json  targets.json  timestamp.json
metadata/root_history/: 1.root.json
scripts/: __init__.py  add_release.py  status.py  verify.py
tests/: test_add_release.py
